--- a/package.json
+++ b/package.json
@@ -16,9 +16,15 @@
   },
   "dependencies": {
     "gatsby": "^2.19.7",
+    "gatsby-background-image": "^0.10.2",
+    "gatsby-plugin-manifest": "^2.2.42",
+    "gatsby-plugin-sharp": "^2.4.5",
+    "gatsby-source-filesystem": "^2.1.48",
+    "gatsby-transformer-sharp": "^2.3.16",
     "gh-pages": "^2.2.0",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "prettier": "^1.19.1"
