--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "deploy": "gatsby build && npm run add-domain && gh-pages -d public -b master"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "gatsby": "^2.19.7",
     "gatsby-background-image": "^0.10.2",
     "gatsby-plugin-google-analytics": "^2.3.13",
