--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "gatsby": "^2.19.7",
     "gatsby-background-image": "^0.10.2",
     "gatsby-plugin-google-analytics": "^2.3.13",
+    "gatsby-plugin-gtag": "^1.0.13",
     "gatsby-plugin-manifest": "^2.2.42",
+    "gatsby-plugin-react-helmet": "^3.3.10",
     "gatsby-plugin-react-svg": "^3.0.0",
     "gatsby-plugin-sharp": "^2.4.5",
     "gatsby-source-filesystem": "^2.1.48",
@@ -28,6 +30,7 @@
     "gh-pages": "^2.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-helmet": "^6.1.0",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
