--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dotenv": "^8.2.0",
     "gatsby": "^2.32.3",
     "gatsby-background-image": "^0.10.2",
+    "gatsby-image": "^3.0.0",
     "gatsby-plugin-google-analytics": "^2.11.0",
     "gatsby-plugin-gtag": "^1.0.13",
     "gatsby-plugin-manifest": "^2.12.0",
